tests/rascal/negative/type_errors/L1/11_expression_ES10_D4_53.ob
MODULE Test11;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
  (* error *)  r := ((~ r) OR (((p - 2) >= z) & ((z <= 1) & (~ p))));
               y := 1223;
               y := (+ 0);
               y := (+ 1);
               z := z;
               z := y;
               z := (+ y);
               x := x;
               x := y;
               y := 1
END Test11.